--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,22 +23,39 @@ html {
   background-color: slategray;
   background-size: 100px 100px, 100px 100px, 50px 50px, 50px 50px; */
 }
+
 /*  */
+
 body {
+  margin: 0 2%;
   font-size: 18px;
   font-family: "Skranji", cursive;
 }
+
 /*  */
+
 .titleblock {
+  /* margin: 20%; */
   text-align: center;
   color: darkslateblue;
 }
+
 .hrLine {
   width: 80%;
   /* height: 5px; */
   color: darkslateblue;
 }
+
+.discription {
+  /* margin: 5%; */
+}
+
+.box {
+  text-align: center;
+}
+
 /*  */
+
 .scoreBox {
   display: flex;
   flex-direction: row;
@@ -47,25 +64,36 @@ body {
   flex-wrap: wrap;
   /*  */
 }
+
 .sbStyle {
   padding: auto 5px;
   margin: auto 5px;
 }
+
 /*  */
+
 .iconBox {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-
   /*  */
   /* background-color: black; */
 }
+
 .iconItem {
   max-width: 100pt;
   padding: 2px;
   margin: 2px;
-  border: 3px solid blue;
+  background-color: rgba(245, 245, 245, 0.4);
+  /* border: 3px solid blue; */
   /* width: 10%; */
+}
+
+.groupText {
+  margin-top: 2%;
+  margin-bottom: 2%;
+  padding: 10px;
+  /* border: 3px solid blue; */
 }
